public/css/component.sass
@import 'definition'

.stat
  @extend %card
  @extend .width-container

  width: 100%
  height: 20em

  padding: 0.5em

.list-song
  @extend .width-container

  padding: 0
  z-index: 100

.song
  @extend %card

  width: 100%
  height: $column-height

  margin-top: 1rem

  img.albumart
    width: $column-height  // + 0.125rem
    height: $column-height // + 0.125rem

    float: left
    position: relative
    z-index: 1000 // (float mans)

    transform-origin: left top
    transition: transform 100ms ease, z-index 100ms cubic-bezier(1, 0, 1, 0)

    &:hover, &:active
      transform: scale(1.75)
      z-index: 1001
      transition: transform 100ms ease, z-index 100ms cubic-bezier(1, 0, 1, 0)

  //-webkit-clip-path: polygon(1% 1%, 99% 1%, 99% 99%, 1% 99%)
  //margin-top: -0.0625rem
  //margin-left: -0.0625rem

  .top
    width: calc(100% - #{$column-height + $column-sidebar-width})
    height: $column-top-height

    float: left

    border-bottom: 0.1rem solid $card-border-color

    span.level
      display: block
      width: $column-level-width
      height: 100%

      font-size: 2rem
      text-align: center

      margin-left: -0.75rem // (skew)
      padding-left: 1.125rem
      padding-right: 1rem
      margin-right: 1rem

      line-height: $column-top-height

      float: left

    h1, h2
      font-weight: 300
      line-height: 1.5rem
      white-space: nowrap

      margin: 0

      text-overflow: ellipsis
      overflow-y: visible

    h1
      font-size: 1.25rem
      margin-top: 0.5rem

    h2
      font-size: 0.875rem
      margin-top: 0

  .bottom
    width: calc(100% - #{$column-height + $column-sidebar-width})
    height: $column-bottom-height

    float: left

    > *
      line-height: 1.75rem

    .clear, .rank
      @extend .skew

      height: 100%

      padding: 0 0.5rem

    .clear
      background: #000

      margin-left: -0.5rem
      border: $lamp-border-style
      padding-left: 0.75rem

    .rank
      border: $lamp-border-style transparent

  .side
    width: $column-sidebar-width
    height: 100%

    border-left: 0.1rem solid $card-border-color

    float: right

    dl
      width: 100%
      height: 100%

      font-weight: bold
      font-size: 0.75em
      line-height: 1.25rem

      margin: 0
      padding: 0.5rem

      dd
        width: 50%
        display: inline-block

        margin: 0
        padding: 0

      dt
        width: 40%
        display: inline-block

        text-align: right

      .disabled
        opacity: 0.25

